Fix notifications extra padding

--- a/scss/components/Notifications.scss
+++ b/scss/components/Notifications.scss
@@ -1,6 +1,6 @@
 .Notifications {
     height: 100%;
-    padding: 20px 14px;
+    padding: 19px 14px;
     position: relative;
     width: 48px;
 
